<resources>
    <string name="app_name">Medicine Reminder</string>

    <string name="today">Today</string>
    <string name="history">History</string>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="add_reminder">Add reminder</string>

    <string-array name="medicine_type">
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Injection</item>
        <item>Syrup</item>
        <item>Cream</item>
        <item>Drops</item>
        <item>Powder</item>
        <item>Inhaler</item>
        <item>Skin Patch</item>
        <item>Other</item>
    </string-array>

    <string-array name="color_type">
        <item>White</item>
        <item>Off White</item>
        <item>Clear</item>
        <item>Gray</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Peach</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Turquoise</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Lavender</item>
        <item>Multicolor</item>
        <item>None</item>
    </string-array>

    <string-array name="shape_type">
        <item>Round</item>
        <item>Oblong</item>
        <item>Oval</item>
        <item>Square</item>
        <item>Rectangle</item>
        <item>Diamond</item>
        <item>None</item>
    </string-array>

    <string-array name="measure_type">
        <item>mg</item>
        <item>ml</item>
        <item>drops</item>
        <item>shot</item>
        <item>dose</item>
        <item>None</item>
    </string-array>

    <string-array name="times_a_day_type">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_reminder_key">widget_reminder_key</string>
    <string name="stock">Stock</string>
    <string name="stock_hint">eg 1</string>
    <string name="reminder_status">Set reminder statuc</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="took_med">I took my medicine</string>
    <string name="no_med">I did not take my medicine</string>
    <string name="none">None</string>
    <string name="med_name">Name of the Medicine</string>
    <string name="med_name_hint">Enter medicine name</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="shape">Shape</string>
    <string name="dosage">Dosage</string>
    <string name="dosage_hint">Enter dosage</string>
    <string name="times_a_day">times/day</string>
    <string name="notes">Notes</string>
    <string name="notes_hint">Enter notes</string>
    <string name="setting">Settings</string>
    <string name="from">From date</string>
    <string name="date_picker">Date picker</string>
    <string name="time_picker">Time picker</string>
    <string name="to">To date</string>
    <string name="rem1">First reminder</string>
    <string name="rem2">Second reminder</string>
    <string name="rem3">Third reminder</string>
    <string name="rem4">Fourth reminder</string>
    <string name="rem5">Fifth reminder</string>
    <string name="date">Date</string>
    <string name="status">Reminder state</string>
    <string name="today_reminder">Todays Reminders</string>
    <string name="edit">Edit</string>
    <string name="notify">Notify</string>


    <string name="stock_title">Stock reminder</string>
    <string name="stock_key">stock_reminder</string>
    <string name="stock_summary_on">On</string>
    <string name="stock_summary_off">Off</string>

    <string name="delete_all_data_title">Delete all data</string>
    <string name="delete_all_data_key">delete_all_data_key</string>

    <string name="del_success">"Delete failed"</string>
    <string name="del_fail">"Delete successful"</string>

    <string name="deleteRem">"Delete Reminder?"</string>
    <string name="delete">"Delete"</string>
    <string name="cancelR">"Cancel"</string>

    <string name="unsaved_dialog">"Unsaved changes. do you want to exit?"</string>
    <string name="unsaved">"Do you want to exit?"</string>
    <string name="discard">"Discard"</string>
    <string name="keep_editing">"Keep editing"</string>

    <string name="add_reminder_fab">Add reminder button</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="one_or_more">One or more fields are empty</string>
    <string name="from_date_check">From date should be not be less than todays date</string>
    <string name="to_date_check">To date should be greater than todays date</string>
    <string name="to_date_check2">To date should be greater than From date</string>
    <string name="reminder_time_check">Reminder time should be greater that previous reminders</string>
    <string name="reminder_added">Reminder added!!!</string>
    <string name="reminder_add_failed">Failed to add Reminder!!!</string>
    <string name="deleting">Deleting all date!!!</string>



</resources>
