<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.medicinereminder.UI.TimeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/dimen_0"
        android:background="?colorPrimary">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_reminder"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStart="@dimen/dimen_16"
            app:title="Time Setup"
            app:layout_collapseMode="pin" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_date_text"
            android:text="@string/from"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_16"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_date_picker"
            android:contentDescription="@string/date_picker"
            android:paddingStart="@dimen/dimen_8"
            android:paddingEnd="@dimen/dimen_8"
            android:nextFocusForward="@id/from_date"
            android:src="@drawable/ic_date_range_black_24dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/from_date_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/from_date"
            android:layout_alignParentStart="true"
            android:layout_below="@id/from_date_text"
            android:paddingTop="@dimen/dimen_8"
            android:nextFocusForward="@id/to_date_picker"
            android:textSize="@dimen/text_16"
            tools:text="25-02-2018"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/to_date_text"
            android:text="@string/to"
            android:layout_alignParentStart="true"
            android:paddingTop="@dimen/dimen_8"
            android:layout_below="@id/from_date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_16"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/to_date_picker"
            android:contentDescription="@string/date_picker"
            android:paddingEnd="@dimen/dimen_8"
            android:paddingStart="@dimen/dimen_8"
            android:paddingTop="@dimen/dimen_8"
            android:src="@drawable/ic_date_range_black_24dp"
            android:layout_below="@id/from_date"
            android:nextFocusForward="@id/to_date"
            android:layout_toEndOf="@id/to_date_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/to_date"
            android:layout_alignParentStart="true"
            android:layout_below="@id/to_date_text"
            android:paddingTop="@dimen/dimen_8"
            android:textSize="@dimen/text_16"
            android:nextFocusForward="@id/first_button"
            tools:text="25-02-2018"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/reminder_one"
            android:paddingTop="@dimen/dimen_8"
            android:layout_alignParentStart="true"
            android:layout_below="@id/to_date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_reminder_text"
                android:text="@string/rem1"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_8"
                android:id="@+id/first_reminder"
                android:layout_alignParentStart="true"
                android:nextFocusForward="@id/second_button"
                android:layout_below="@id/first_reminder_text"
                android:textSize="@dimen/text_16"
                tools:text="10:28 PM "/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/time_picker"
                android:nextFocusForward="@id/first_reminder"
                android:id="@+id/first_button"
                android:layout_toEndOf="@id/first_reminder_text"
                android:paddingEnd="@dimen/dimen_8"
                android:paddingStart="@dimen/dimen_8"
                android:src="@drawable/ic_access_time_black_24dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/reminder_two"
            android:paddingTop="@dimen/dimen_8"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reminder_one">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem2"
                android:id="@+id/second_reminder_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_8"
                android:textSize="@dimen/text_16"
                android:id="@+id/second_reminder"
                android:layout_alignParentStart="true"
                android:nextFocusForward="@id/third_button"
                android:layout_below="@id/second_reminder_text"
                tools:text="10:28 PM "/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dimen_8"
                android:paddingStart="@dimen/dimen_8"
                android:contentDescription="@string/time_picker"
                android:id="@+id/second_button"
                android:nextFocusForward="@id/second_reminder"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/second_reminder_text"
                android:src="@drawable/ic_access_time_black_24dp"/>


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/reminder_three"
            android:paddingTop="@dimen/dimen_8"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reminder_two">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem3"
                android:id="@+id/third_reminder_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/third_reminder"
                android:nextFocusForward="@id/fourth_button"
                android:layout_below="@id/third_reminder_text"
                android:paddingTop="@dimen/dimen_8"
                android:textSize="@dimen/text_16"
                tools:text="10:28 PM "/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dimen_8"
                android:paddingStart="@dimen/dimen_8"
                android:contentDescription="@string/time_picker"
                android:nextFocusForward="@id/third_reminder"
                android:id="@+id/third_button"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/third_reminder_text"
                android:src="@drawable/ic_access_time_black_24dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/reminder_four"
            android:paddingTop="@dimen/dimen_8"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reminder_three">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem4"
                android:id="@+id/fourth_reminder_text"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_8"
                android:id="@+id/fourth_reminder"
                android:nextFocusForward="@id/fifth_button"
                android:layout_alignParentStart="true"
                android:layout_below="@id/fourth_reminder_text"
                android:textSize="@dimen/text_16"
                tools:text="10:28 PM "/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dimen_8"
                android:paddingStart="@dimen/dimen_8"
                android:contentDescription="@string/time_picker"
                android:id="@+id/fourth_button"
                android:nextFocusForward="@id/fourth_reminder"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/fourth_reminder_text"
                android:src="@drawable/ic_access_time_black_24dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/reminder_five"
            android:paddingTop="@dimen/dimen_8"
            android:layout_alignParentStart="true"
            android:layout_below="@id/reminder_four">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rem5"
                android:id="@+id/fifth_reminder_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_8"
                android:id="@+id/fifth_reminder"
                android:layout_alignParentStart="true"
                android:layout_below="@id/fifth_reminder_text"
                android:textSize="@dimen/text_16"
                tools:text="10:28 PM "/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/dimen_8"
                android:paddingStart="@dimen/dimen_8"
                android:contentDescription="@string/time_picker"
                android:id="@+id/fifth_button"
                android:layout_alignParentTop="true"
                android:nextFocusForward="@id/first_reminder"
                android:layout_toEndOf="@id/fifth_reminder_text"
                android:src="@drawable/ic_access_time_black_24dp"/>
        </RelativeLayout>

    </RelativeLayout>
    </ScrollView>


</LinearLayout>
